--- a/tex/p130.tex
+++ b/tex/p130.tex
@@ -41,7 +41,7 @@
 \vs p130 3:5 \pc Under Jesus’ direction Ganid made a collection of the teachings of all those religions of the world which recognized a Universal Deity, even though they might also give more or less recognition to subordinate deities. After much discussion Jesus and Ganid decided that the Romans had no real God in their religion, that their religion was hardly more than emperor worship. The Greeks, they concluded, had a philosophy but hardly a religion with a personal God. The mystery cults they discarded because of the confusion of their multiplicity, and because their varied concepts of Deity seemed to be derived from other and older religions.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Jesus-Ganid-Alexandria.jpg}\caption{Studying at the Alexandrian Library by Slawa~Radziszewska}\end{figure}}
 \vs p130 3:6 Although these translations were made at Alexandria, Ganid did not finally arrange these selections and add his own personal conclusions until near the end of their sojourn in Rome. He was much surprised to discover that the best of the authors of the world’s sacred literature all more or less clearly recognized the existence of an eternal God and were much in agreement with regard to his character and his relationship with mortal man.
 \vs p130 3:7 \pc Jesus and Ganid spent much time in the museum during their stay in Alexandria. This museum was not a collection of rare objects but rather a university of fine art, science, and literature. Learned professors here gave daily lectures, and in those times this was the intellectual centre of the Occidental world. Day by day Jesus interpreted the lectures to Ganid; one day during the second week the young man exclaimed: “Teacher Joshua, you know more than these professors; you should stand up and tell them the great things you have told me; they are befogged by much thinking. I shall speak to my father and have him arrange it.” Jesus smiled, saying: \textcolour{ubdarkred}{“You are an admiring pupil, but these teachers are not minded that you and I should instruct them. The pride of unspiritualized learning is a treacherous thing in human experience. The true teacher maintains his intellectual integrity by ever remaining a learner.”}
-\vs p130 3:8 Alexandria was the city of the blended culture of the Occident and next to Rome the largest and most magnificent in the world. Here was located the largest Jewish synagogue in the world, the seat of government of the Alexandria Sanhedrin, the 70 ruling elders.
+\vs p130 3:8 Alexandria was the city of the blended culture of the Occident and next to Rome the largest and most magnificent in the world. Here was located the largest Jewish synagogue in the world, the seat of government of the Alexandria Sanhedrin, the seventy ruling elders.
 \vs p130 3:9 Among the many men with whom Gonod transacted business was a certain Jewish banker, Alexander, whose brother, Philo, was a famous religious philosopher of that time. Philo was engaged in the laudable but exceedingly difficult task of harmonizing Greek philosophy and Hebrew theology. Ganid and Jesus talked much about Philo’s teachings and expected to attend some of his lectures, but throughout their stay at Alexandria this famous Hellenistic Jew lay sick abed.
 \vs p130 3:10 Jesus commended to Ganid much in the Greek philosophy and the Stoic doctrines, but he impressed upon the lad the truth that these systems of belief, like the indefinite teachings of some of his own people, were religions only in the sense that they led men to find God and enjoy a living experience in knowing the Eternal.
 \usection{Discourse on Reality}
