--- a/tex/p139.tex
+++ b/tex/p139.tex
@@ -32,7 +32,7 @@
 \vs p139 2:2 The Master had known Simon for some time before Andrew presented him as the second of the apostles. When Jesus gave Simon the name Peter, he did it with a smile; it was to be a sort of nickname. Simon was well known to all his friends as an erratic and impulsive fellow. True, later on, Jesus did attach a new and significant import to this lightly bestowed nickname.
 \vs p139 2:3 \pc Simon Peter was a man of impulse, an optimist. He had grown up permitting himself freely to indulge strong feelings; he was constantly getting into difficulties because he persisted in speaking without thinking. This sort of thoughtlessness also made incessant trouble for all of his friends and associates and was the cause of his receiving many mild rebukes from his Master. The only reason Peter did not get into more trouble because of his thoughtless speaking was that he very early learned to talk over many of his plans and schemes with his brother, Andrew, before he ventured to make public proposals.
 \vs p139 2:4 Peter was a fluent speaker, eloquent and dramatic. He was also a natural and inspirational leader of men, a quick thinker but not a deep reasoner. He asked many questions, more than all the apostles put together, and while the majority of these questions were good and relevant, many of them were thoughtless and foolish. Peter did not have a deep mind, but he knew his mind fairly well. He was therefore a man of quick decision and sudden action. While others talked in their astonishment at seeing Jesus on the beach, Peter jumped in and swam ashore to meet the Master.
-\vs p139 2:5 \pc The one trait which Peter most admired in Jesus was his supernal tenderness. Peter never grew weary of contemplating Jesus’ forbearance. He never forgot the lesson about forgiving the wrongdoer, not only 7 times but 70 times and 7. He thought much about these impressions of the Master’s forgiving character during those dark and dismal days immediately following his thoughtless and unintended denial of Jesus in the high priest’s courtyard.
+\vs p139 2:5 \pc The one trait which Peter most admired in Jesus was his supernal tenderness. Peter never grew weary of contemplating Jesus’ forbearance. He never forgot the lesson about forgiving the wrongdoer, not only seven times but seventy times and seven. He thought much about these impressions of the Master’s forgiving character during those dark and dismal days immediately following his thoughtless and unintended denial of Jesus in the high priest’s courtyard.
 \vs p139 2:6 \pc Simon Peter was distressingly vacillating; he would suddenly swing from one extreme to the other. First he refused to let Jesus wash his feet and then, on hearing the Master’s reply, begged to be washed all over. But, after all, Jesus knew that Peter’s faults were of the head and not of the heart. He was one of the most inexplicable combinations of courage and cowardice that ever lived on earth. His great strength of character was loyalty, friendship. Peter really and truly loved Jesus. And yet despite this towering strength of devotion he was so unstable and inconstant that he permitted a servant girl to tease him into denying his Lord and Master. Peter could withstand persecution and any other form of direct assault, but he withered and shrank before ridicule. He was a brave soldier when facing a frontal attack, but he was a fear\hyp{}cringing coward when surprised with an assault from the rear.
 \vs p139 2:7 Peter was the first of Jesus’ apostles to come forward to defend the work of Philip among the Samaritans and Paul among the gentiles; yet later on at Antioch he reversed himself when confronted by ridiculing Judaizers, temporarily withdrawing from the gentiles only to bring down upon his head the fearless denunciation of Paul.
 \vs p139 2:8 He was the first one of the apostles to make wholehearted confession of Jesus’ combined humanity and divinity and the first --- save Judas --- to deny him. Peter was not so much of a dreamer, but he disliked to descend from the clouds of ecstasy and the enthusiasm of dramatic indulgence to the plain and matter\hyp{}of\hyp{}fact world of reality.
