--- a/tex/p144.tex
+++ b/tex/p144.tex
@@ -197,7 +197,7 @@
 \vs p144 7:1 Throughout the months of November and December, Jesus and the 24 worked quietly in the Greek cities of the Decapolis, chiefly in Scythopolis, Gerasa, Abila, and Gadara. This was really the end of that preliminary period of taking over John’s work and organization. Always does the socialized religion of a new revelation pay the price of compromise with the established forms and usages of the preceding religion which it seeks to salvage. Baptism was the price which the followers of Jesus paid in order to carry with them, as a socialized religious group, the followers of John the Baptist. John’s followers, in joining Jesus’ followers, gave up just about everything except water baptism.
 \vs p144 7:2 Jesus did little public teaching on this mission to the cities of the Decapolis. He spent considerable time teaching the 24 and had many special sessions with John’s twelve apostles. In time they became more understanding as to why Jesus did not go to visit John in prison, and why he made no effort to secure his release. But they never could understand why Jesus did no marvellous works, why he refused to produce outward signs of his divine authority. Before coming to the Gilboa camp, they had believed in Jesus mostly because of John’s testimony, but soon they were beginning to believe as a result of their own contact with the Master and his teachings.
 \vs p144 7:3 For these two months the group worked most of the time in pairs, one of Jesus’ apostles going out with one of John’s. The apostle of John baptized, the apostle of Jesus instructed, while they both preached the gospel of the kingdom as they understood it. And they won many souls among these gentiles and apostate Jews.
-\vs p144 7:4 Abner, the chief of John’s apostles, became a devout believer in Jesus and was later on made the head of a group of 70 teachers whom the Master commissioned to preach the gospel.
+\vs p144 7:4 Abner, the chief of John’s apostles, became a devout believer in Jesus and was later on made the head of a group of seventy teachers whom the Master commissioned to preach the gospel.
 \usection{In Camp near Pella}
 \vs p144 8:1 The latter part of December they all went over near the Jordan, close by Pella, where they again began to teach and preach. Both Jews and gentiles came to this camp to hear the gospel. It was while Jesus was teaching the multitude one afternoon that some of John’s special friends brought the Master the last message which he ever had from the Baptist.
 \vs p144 8:2 John had now been in prison a year and a half, and most of this time Jesus had laboured very quietly; so it was not strange that John should be led to wonder about the kingdom. John’s friends interrupted Jesus’ teaching to say to him: “John the Baptist has sent us to ask --- are you truly the Deliverer, or shall we look for another?”
