--- a/tex/p164.tex
+++ b/tex/p164.tex
@@ -16,7 +16,7 @@
 \vs p164 2:1 Jesus had attended the feast of tabernacles that he might proclaim the gospel to the pilgrims from all parts of the empire; he now went up to the feast of the dedication for just one purpose: to give the Sanhedrin and the Jewish leaders another chance to see the light. The principal event of these few days in Jerusalem occurred on Friday night at the home of Nicodemus. Here were gathered together some 25 Jewish leaders who believed Jesus’ teaching. Among this group were 14 men who were then, or had recently been, members of the Sanhedrin. This meeting was attended by Eber, Matadormus, and Joseph of Arimathea.
 \vs p164 2:2 On this occasion Jesus’ hearers were all learned men, and both they and his two apostles were amazed at the breadth and depth of the remarks which the Master made to this distinguished group. Not since the times when he had taught in Alexandria, Rome, and in the islands of the Mediterranean, had he exhibited such learning and shown such a grasp of the affairs of men, both secular and religious.
 \vs p164 2:3 When this little meeting broke up, all went away mystified by the Master’s personality, charmed by his gracious manner, and in love with the man. They had sought to advise Jesus concerning his desire to win the remaining members of the Sanhedrin. The Master listened attentively, but silently, to all their proposals. He well knew none of their plans would work. He surmised that the majority of the Jewish leaders never would accept the gospel of the kingdom; nevertheless, he gave them all this one more chance to choose. But when he went forth that night, with Nathaniel and Thomas, to lodge on the Mount of Olives, he had not yet decided upon the method he would pursue in bringing his work once more to the notice of the Sanhedrin.
-\vs p164 2:4 That night Nathaniel and Thomas slept little; they were too much amazed by what they had heard at Nicodemus’s house. They thought much over the final remark of Jesus regarding the offer of the former and present members of the Sanhedrin to go with him before the 70. The Master said: \textcolour{ubdarkred}{“No, my brethren, it would be to no purpose. You would multiply the wrath to be visited upon your own heads, but you would not in the least mitigate the hatred which they bear me. Go, each of you, about the Father’s business as the spirit leads you while I once more bring the kingdom to their notice in the manner which my Father may direct.”}
+\vs p164 2:4 That night Nathaniel and Thomas slept little; they were too much amazed by what they had heard at Nicodemus’s house. They thought much over the final remark of Jesus regarding the offer of the former and present members of the Sanhedrin to go with him before the seventy. The Master said: \textcolour{ubdarkred}{“No, my brethren, it would be to no purpose. You would multiply the wrath to be visited upon your own heads, but you would not in the least mitigate the hatred which they bear me. Go, each of you, about the Father’s business as the spirit leads you while I once more bring the kingdom to their notice in the manner which my Father may direct.”}
 \usection{Healing the Blind Beggar}
 \vs p164 3:1 The next morning the three went over to Martha’s home at Bethany for breakfast and then went immediately into Jerusalem. This Sabbath morning, as Jesus and his two apostles drew near the temple, they encountered a well\hyp{}known beggar, a man who had been born blind, sitting at his usual place. Although these mendicants did not solicit or receive alms on the Sabbath day, they were permitted thus to sit in their usual places. Jesus paused and looked upon the beggar. As he gazed upon this man who had been born blind, the idea came into his mind as to how he would once more bring his mission on earth to the notice of the Sanhedrin and the other Jewish leaders and religious teachers.
 \vs p164 3:2 As the Master stood there before the blind man, engrossed in deep thought, Nathaniel, pondering the possible cause of this man’s blindness, asked: “Master, who did sin, this man or his parents, that he should be born blind?”
