--- a/tex/p166.tex
+++ b/tex/p166.tex
@@ -20,8 +20,8 @@
 \vs p166 1:10 \ublistelem{3.}\bibnobreakspace Avoidance of association with all non\hyp{}Pharisees.
 \vs p166 1:11 \pc At this time Jesus sought to expose the spiritual barrenness of the first two practices, while he reserved his remarks designed to rebuke the Pharisees’ refusal to engage in social intercourse with non\hyp{}Pharisees for another and subsequent occasion when he would again be dining with many of these same men.
 \usection{The Ten Lepers}
-\vs p166 2:1 The next day Jesus went with the twelve over to Amathus, near the border of Samaria, and as they approached the city, they encountered a group of ten lepers who sojourned near this place. Nine of this group were Jews, one a Samaritan. Ordinarily these Jews would have refrained from all association or contact with this Samaritan, but their common affliction was more than enough to overcome all religious prejudice. They had heard much of Jesus and his earlier miracles of healing, and since the 70 made a practice of announcing the time of Jesus’ expected arrival when the Master was out with the twelve on these tours, the ten lepers had been made aware that he was expected to appear in this vicinity at about this time; and they were, accordingly, posted here on the outskirts of the city where they hoped to attract his attention and ask for healing. When the lepers saw Jesus drawing near them, not daring to approach him, they stood afar off and cried to him: “Master, have mercy on us; cleanse us from our affliction. Heal us as you have healed others.”
-\vs p166 2:2 Jesus had just been explaining to the twelve why the gentiles of Perea, together with the less orthodox Jews, were more willing to believe the gospel preached by the 70 than were the more orthodox and tradition\hyp{}bound Jews of Judea. He had called their attention to the fact that their message had likewise been more readily received by the Galileans, and even by the Samaritans. But the twelve apostles were hardly yet willing to entertain kind feelings for the long\hyp{}despised Samaritans.
+\vs p166 2:1 The next day Jesus went with the twelve over to Amathus, near the border of Samaria, and as they approached the city, they encountered a group of ten lepers who sojourned near this place. Nine of this group were Jews, one a Samaritan. Ordinarily these Jews would have refrained from all association or contact with this Samaritan, but their common affliction was more than enough to overcome all religious prejudice. They had heard much of Jesus and his earlier miracles of healing, and since the seventy made a practice of announcing the time of Jesus’ expected arrival when the Master was out with the twelve on these tours, the ten lepers had been made aware that he was expected to appear in this vicinity at about this time; and they were, accordingly, posted here on the outskirts of the city where they hoped to attract his attention and ask for healing. When the lepers saw Jesus drawing near them, not daring to approach him, they stood afar off and cried to him: “Master, have mercy on us; cleanse us from our affliction. Heal us as you have healed others.”
+\vs p166 2:2 Jesus had just been explaining to the twelve why the gentiles of Perea, together with the less orthodox Jews, were more willing to believe the gospel preached by the seventy than were the more orthodox and tradition\hyp{}bound Jews of Judea. He had called their attention to the fact that their message had likewise been more readily received by the Galileans, and even by the Samaritans. But the twelve apostles were hardly yet willing to entertain kind feelings for the long\hyp{}despised Samaritans.
 \vs p166 2:3 Accordingly, when Simon Zelotes observed the Samaritan among the lepers, he sought to induce the Master to pass on into the city without even hesitating to exchange greetings with them. Said Jesus to Simon: \textcolour{ubdarkred}{“But what if the Samaritan loves God as well as the Jews? Should we sit in judgment on our fellow men? Who can tell? if we make these ten men whole, perhaps the Samaritan will prove more grateful even than the Jews. Do you feel certain about your opinions, Simon?”} And Simon quickly replied, “If you cleanse them, you will soon find out.” And Jesus replied: \textcolour{ubdarkred}{“So shall it be, Simon, and you will soon know the truth regarding the gratitude of men and the loving mercy of God.”}
 \vs p166 2:4 Jesus, going near the lepers, said: \textcolour{ubdarkred}{“If you would be made whole, go forthwith and show yourselves to the priests as required by the law of Moses.”} And as they went, they were made whole. But when the Samaritan saw that he was being healed, he turned back and, going in quest of Jesus, began to glorify God with a loud voice. And when he had found the Master, he fell on his knees at his feet and gave thanks for his cleansing. The nine others, the Jews, had also discovered their healing, and while they also were grateful for their cleansing, they continued on their way to show themselves to the priests.
 \vs p166 2:5 As the Samaritan remained kneeling at Jesus’ feet, the Master, looking about at the 12, especially at Simon Zelotes, said: \textcolour{ubdarkred}{“Were not ten cleansed? Where, then, are the other nine, the Jews? Only one, this alien, has returned to give glory to God.”} And then he said to the Samaritan, \textcolour{ubdarkred}{“Arise and go your way; your faith has made you whole.”}
@@ -51,7 +51,7 @@
 \vs p166 4:11 \textcolour{ubdarkred}{“The Father’s human children have equal capacity for the reception of material blessings; therefore does he bestow things physical upon the children of men without discrimination. When it comes to the bestowal of spiritual gifts, the Father is limited by man’s capacity for receiving these divine endowments. Although the Father is no respecter of persons, in the bestowal of spiritual gifts he is limited by man’s faith and by his willingness always to abide by the Father’s will.”}
 \vs p166 4:12 \pc As they journeyed on toward Philadelphia, Jesus continued to teach them and to answer their questions having to do with accidents, sickness, and miracles, but they were not able fully to comprehend this instruction. One hour of teaching will not wholly change the beliefs of a lifetime, and so Jesus found it necessary to reiterate his message, to tell again and again that which he wished them to understand; and even then they failed to grasp the meaning of his earth mission until after his death and resurrection.
 \usection{The Congregation at Philadelphia}
-\vs p166 5:1 Jesus and the twelve were on their way to visit Abner and his associates, who were preaching and teaching in Philadelphia. Of all the cities of Perea, in Philadelphia the largest group of Jews and gentiles, rich and poor, learned and unlearned, embraced the teachings of the 70, thereby entering into the kingdom of heaven. The synagogue of Philadelphia had never been subject to the supervision of the Sanhedrin at Jerusalem and therefore had never been closed to the teachings of Jesus and his associates. At this very time, Abner was teaching three times a day in the Philadelphia synagogue.
+\vs p166 5:1 Jesus and the twelve were on their way to visit Abner and his associates, who were preaching and teaching in Philadelphia. Of all the cities of Perea, in Philadelphia the largest group of Jews and gentiles, rich and poor, learned and unlearned, embraced the teachings of the seventy, thereby entering into the kingdom of heaven. The synagogue of Philadelphia had never been subject to the supervision of the Sanhedrin at Jerusalem and therefore had never been closed to the teachings of Jesus and his associates. At this very time, Abner was teaching three times a day in the Philadelphia synagogue.
 \vs p166 5:2 This very synagogue later on became a Christian church and was the missionary headquarters for the promulgation of the gospel through the regions to the east. It was long a stronghold of the Master’s teachings and stood alone in this region as a centre of Christian learning for centuries.
 \vs p166 5:3 The Jews at Jerusalem had always had trouble with the Jews of Philadelphia. And after the death and resurrection of Jesus the Jerusalem church, of which James the Lord’s brother was head, began to have serious difficulties with the Philadelphia congregation of believers. Abner became the head of the Philadelphia church, continuing as such until his death. And this estrangement with Jerusalem explains why nothing is heard of Abner and his work in the Gospel records of the New Testament. This feud between Jerusalem and Philadelphia lasted throughout the lifetimes of James and Abner and continued for some time after the destruction of Jerusalem. Philadelphia was really the headquarters of the early church in the south and east as Antioch was in the north and west.
 \vs p166 5:4 \pc It was the apparent misfortune of Abner to be at variance with all of the leaders of the early Christian church. He fell out with Peter and James (Jesus’ brother) over questions of administration and the jurisdiction of the Jerusalem church; he parted company with Paul over differences of philosophy and theology. Abner was more Babylonian than Hellenic in his philosophy, and he stubbornly resisted all attempts of Paul to remake the teachings of Jesus so as to present less that was objectionable, first to the Jews, then to the Gr\ae co\hyp{}Roman believers in the mysteries.
