--- a/tex/p167.tex
+++ b/tex/p167.tex
@@ -7,7 +7,7 @@
 \uminitoc{Blessing the Little Children}
 \uminitoc{The Talk about Angels}
 \author{Midwayer Commission}
-\vs p167 0:1 Throughout this period of the Perean ministry, when mention is made of Jesus and the apostles visiting the various localities where the 70 were at work, it should be recalled that, as a rule, only ten were with him since it was the practice to leave at least two of the apostles at Pella to instruct the multitude. As Jesus prepared to go on to Philadelphia, Simon Peter and his brother, Andrew, returned to the Pella encampment to teach the crowds there assembled. When the Master left the camp at Pella to visit about Perea, it was not uncommon for from 300 to 500 of the campers to follow him. When he arrived at Philadelphia, he was accompanied by over 600 followers.
+\vs p167 0:1 Throughout this period of the Perean ministry, when mention is made of Jesus and the apostles visiting the various localities where the seventy were at work, it should be recalled that, as a rule, only ten were with him since it was the practice to leave at least two of the apostles at Pella to instruct the multitude. As Jesus prepared to go on to Philadelphia, Simon Peter and his brother, Andrew, returned to the Pella encampment to teach the crowds there assembled. When the Master left the camp at Pella to visit about Perea, it was not uncommon for from 300 to 500 of the campers to follow him. When he arrived at Philadelphia, he was accompanied by over 600 followers.
 \vs p167 0:2 No miracles had attended the recent preaching tour through the Decapolis, and, excepting the cleansing of the ten lepers, thus far there had been no miracles on this Perean mission. This was a period when the gospel was proclaimed with power, without miracles, and most of the time without the personal presence of Jesus or even of his apostles.
 \vs p167 0:3 \pc Jesus and the ten apostles arrived at Philadelphia on Wednesday, February 22, and spent Thursday and Friday resting from their recent travels and labours. That Friday night James spoke in the synagogue, and a general council was called for the following evening. They were much rejoiced over the progress of the gospel at Philadelphia and among the near\hyp{}by villages. The messengers of David also brought word of the further advancement of the kingdom throughout Palestine, as well as good news from Alexandria and Damascus.
 \usection{Breakfast with the Pharisees}
