--- a/tex/p171.tex
+++ b/tex/p171.tex
@@ -16,7 +16,7 @@
 \vs p171 0:6 By this time someone had carried word of this conference to Peter and the other apostles, and they were highly indignant that James and John would seek to be preferred before them, and that they would secretly go with their mother to make such a request. When they fell to arguing among themselves, Jesus called them all together and said: \textcolour{ubdarkred}{“You well understand how the rulers of the gentiles lord it over their subjects, and how those who are great exercise authority. But it shall not be so in the kingdom of heaven. Whosoever would be great among you, let him first become your servant. He who would be first in the kingdom, let him become your minister. I declare to you that the Son of Man came not to be ministered to but to minister; and I now go up to Jerusalem to lay down my life in the doing of the Father’s will and in the service of my brethren.”} When the apostles heard these words, they withdrew by themselves to pray. That evening, in response to the labours of Peter, James and John made suitable apologies to the ten and were restored to the good graces of their brethren.
 \vs p171 0:7 In asking for places on the right hand and on the left hand of Jesus at Jerusalem, the sons of Zebedee little realized that in less than one month their beloved teacher would be hanging on a Roman cross with a dying thief on one side and another transgressor on the other side. And their mother, who was present at the crucifixion, well remembered the foolish request she had made of Jesus at Pella regarding the honours she so unwisely sought for her apostle sons.
 \usection{The Departure from Pella}
-\vs p171 1:1 On the forenoon of Monday, March 13, Jesus and his twelve apostles took final leave of the Pella encampment, starting south on their tour of the cities of southern Perea, where Abner’s associates were at work. They spent more than two weeks visiting among the 70 and then went directly to Jerusalem for the Passover.
+\vs p171 1:1 On the forenoon of Monday, March 13, Jesus and his twelve apostles took final leave of the Pella encampment, starting south on their tour of the cities of southern Perea, where Abner’s associates were at work. They spent more than two weeks visiting among the seventy and then went directly to Jerusalem for the Passover.
 \vs p171 1:2 When the Master left Pella, the disciples encamped with the apostles, about 1,000 in number, followed after him. About one half of this group left him at the Jordan ford on the road to Jericho when they learned he was going over to Heshbon, and after he had preached the sermon on “Counting the Cost.” They went on up to Jerusalem, while the other half followed him for two weeks, visiting the towns in southern Perea.
 \vs p171 1:3 In a general way, most of Jesus’ immediate followers understood that the camp at Pella had been abandoned, but they really thought this indicated that their Master at last intended to go to Jerusalem and lay claim to David’s throne. A large majority of his followers never were able to grasp any other concept of the kingdom of heaven; no matter what he taught them, they would not give up this Jewish idea of the kingdom.
 \vs p171 1:4 Acting on the instructions of the Apostle Andrew, David Zebedee closed the visitors’ camp at Pella on Wednesday, March 15. At this time almost 4,000 visitors were in residence, and this does not include the 1,000 and more persons who sojourned with the apostles at what was known as the teachers’ camp, and who went south with Jesus and the twelve. Much as David disliked to do it, he sold the entire equipment to numerous buyers and proceeded with the funds to Jerusalem, subsequently turning the money over to Judas Iscariot.
@@ -30,8 +30,8 @@
 \vs p171 2:5 \textcolour{ubdarkred}{“Now should you examine yourself to find out your motive for being my disciple. If you seek honour and glory, if you are worldly minded, you are like the salt when it has lost its savour. And when that which is valued for its saltiness has lost its savour, wherewith shall it be seasoned? Such a condiment is useless; it is fit only to be cast out among the refuse. Now have I warned you to turn back to your homes in peace if you are not willing to drink with me the cup which is being prepared. Again and again have I told you that my kingdom is not of this world, but you will not believe me. He who has ears to hear let him hear what I say.”}
 \vs p171 2:6 \pc Immediately after speaking these words, Jesus, leading the twelve, started off on the way to Heshbon, followed by about 500. After a brief delay the other half of the multitude went on up to Jerusalem. His apostles, together with the leading disciples, thought much about these words, but still they clung to the belief that, after this brief period of adversity and trial, the kingdom would certainly be set up somewhat in accordance with their long\hyp{}cherished hopes.
 \usection{The Perean Tour}
-\vs p171 3:1 For more than two weeks Jesus and the twelve, followed by a crowd of several hundred disciples, journeyed about in southern Perea, visiting all of the towns wherein the 70 laboured. Many gentiles lived in this region, and since few were going up to the Passover feast at Jerusalem, the messengers of the kingdom went right on with their work of teaching and preaching.
-\vs p171 3:2 Jesus met Abner at Heshbon, and Andrew directed that the labours of the 70 should not be interrupted by the Passover feast; Jesus advised that the messengers should go forward with their work in complete disregard of what was about to happen at Jerusalem. He also counselled Abner to permit the women’s corps, at least such as desired, to go to Jerusalem for the Passover. And this was the last time Abner ever saw Jesus in the flesh. His farewell to Abner was: \textcolour{ubdarkred}{“My son, I know you will be true to the kingdom, and I pray the Father to grant you wisdom that you may love and understand your brethren.”}
+\vs p171 3:1 For more than two weeks Jesus and the twelve, followed by a crowd of several hundred disciples, journeyed about in southern Perea, visiting all of the towns wherein the seventy laboured. Many gentiles lived in this region, and since few were going up to the Passover feast at Jerusalem, the messengers of the kingdom went right on with their work of teaching and preaching.
+\vs p171 3:2 Jesus met Abner at Heshbon, and Andrew directed that the labours of the seventy should not be interrupted by the Passover feast; Jesus advised that the messengers should go forward with their work in complete disregard of what was about to happen at Jerusalem. He also counselled Abner to permit the women’s corps, at least such as desired, to go to Jerusalem for the Passover. And this was the last time Abner ever saw Jesus in the flesh. His farewell to Abner was: \textcolour{ubdarkred}{“My son, I know you will be true to the kingdom, and I pray the Father to grant you wisdom that you may love and understand your brethren.”}
 \vs p171 3:3 As they travelled from city to city, large numbers of their followers deserted to go on to Jerusalem so that, by the time Jesus started for the Passover, the number of those who followed along with him day by day had dwindled to less than 200.
 \vs p171 3:4 The apostles understood that Jesus was going to Jerusalem for the Passover. They knew that the Sanhedrin had broadcast a message to all Israel that he had been condemned to die and directing that anyone knowing his whereabouts should inform the Sanhedrin; and yet, despite all this, they were not so alarmed as they had been when he had announced to them in Philadelphia that he was going to Bethany to see Lazarus. This change of attitude from that of intense fear to a state of hushed expectancy was mostly because of Lazarus’s resurrection. They had reached the conclusion that Jesus might, in an emergency, assert his divine power and put to shame his enemies. This hope, coupled with their more profound and mature faith in the spiritual supremacy of their Master, accounted for the outward courage displayed by his immediate followers, who now made ready to follow him into Jerusalem in the very face of the open declaration of the Sanhedrin that he must die.
 \vs p171 3:5 The majority of the apostles and many of his inner disciples did not believe it possible for Jesus to die; they, believing that he was “the resurrection and the life,” regarded him as immortal and already triumphant over death.
