--- a/tex/p177.tex
+++ b/tex/p177.tex
@@ -30,7 +30,7 @@
 \vs p177 3:3 \pc About 16:00, runners came to David Zebedee bringing him word from his mother at Bethsaida and from Jesus’ mother. Several days previously David had made up his mind that the chief priests and rulers were going to kill Jesus. David knew they were determined to destroy the Master, and he was about convinced that Jesus would neither exert his divine power to save himself nor permit his followers to employ force in his defence. Having reached these conclusions, he lost no time in dispatching a messenger to his mother, urging her to come at once to Jerusalem and to bring Mary the mother of Jesus and every member of his family.
 \vs p177 3:4 David’s mother did as her son requested, and now the runners came back to David bringing the word that his mother and Jesus’ entire family were on the way to Jerusalem and should arrive sometime late on the following day or very early the next morning. Since David did this on his own initiative, he thought it wise to keep the matter to himself. He told no one, therefore, that Jesus’ family was on the way to Jerusalem.
 \vs p177 3:5 \pc Shortly after noon, more than 20 of the Greeks who had met with Jesus and the twelve at the home of Joseph of Arimathea arrived at the camp, and Peter and John spent several hours in conference with them. These Greeks, at least some of them, were well advanced in the knowledge of the kingdom, having been instructed by Rodan at Alexandria.
-\vs p177 3:6 That evening, after returning to the camp, Jesus visited with the Greeks, and had it not been that such a course would have greatly disturbed his apostles and many of his leading disciples, he would have ordained these 20 Greeks, even as he had the 70.
+\vs p177 3:6 That evening, after returning to the camp, Jesus visited with the Greeks, and had it not been that such a course would have greatly disturbed his apostles and many of his leading disciples, he would have ordained these 20 Greeks, even as he had the seventy.
 \vs p177 3:7 \pc While all of this was going on at the camp, in Jerusalem the chief priests and elders were amazed that Jesus did not return to address the multitudes. True, the day before, when he left the temple, he had said, \textcolour{ubdarkred}{“I leave your house to you desolate.”} But they could not understand why he would be willing to forgo the great advantage which he had built up in the friendly attitude of the crowds. While they feared he would stir up a tumult among the people, the Master’s last words to the multitude had been an exhortation to conform in every reasonable manner with the authority of those “who sit in Moses’ seat.” But it was a busy day in the city as they simultaneously prepared for the Passover and perfected their plans for destroying Jesus.
 \vs p177 3:8 \pc Not many people came to the camp, for its establishment had been kept a well\hyp{}guarded secret by all who knew that Jesus was expecting to stay there in place of going out to Bethany every night.
 \usection{Judas and the Chief Priests}
