--- a/tex/p191.tex
+++ b/tex/p191.tex
@@ -34,7 +34,7 @@
 \vs p191 3:3 Jesus made the transit to the 3\ts{rd} stage of morontia on Friday, April 14; to the 4\ts{th} stage on Monday, the 17\ts{th}; to the 5\ts{th} stage on Saturday, the 22\ts{nd}; to the 6\ts{th} stage on Thursday, the 27\ts{th}; to the 7\ts{th} stage on Tuesday, May 2; to Jerusem citizenship on Sunday, the 7\ts{th}; and he entered the embrace of the Most Highs of Edentia on Sunday, the 14\ts{th}.
 \vs p191 3:4 In this manner did Michael of Nebadon complete his service of universe experience since he had already, in connection with his previous bestowals, experienced to the full the life of the ascendant mortals of time and space from the sojourn on the headquarters of the constellation even on to, and through, the service of the headquarters of the superuniverse. And it was by these very morontia experiences that the Creator Son of Nebadon really finished and acceptably terminated his 7\ts{th} and final universe bestowal.
 \usection{The Tenth Appearance (At Philadelphia)}
-\vs p191 4:1 The 10\ts{th} morontia manifestation of Jesus to mortal recognition occurred a short time after 8:00 on Tuesday, April 11, at Philadelphia, where he showed himself to Abner and Lazarus and some 150 of their associates, including more than 50 of the evangelistic corps of the 70. This appearance occurred just after the opening of a special meeting in the synagogue which had been called by Abner to discuss the crucifixion of Jesus and the more recent report of the resurrection which had been brought by David’s messenger. Inasmuch as the resurrected Lazarus was now a member of this group of believers, it was not difficult for them to believe the report that Jesus had risen from the dead.
+\vs p191 4:1 The 10\ts{th} morontia manifestation of Jesus to mortal recognition occurred a short time after 8:00 on Tuesday, April 11, at Philadelphia, where he showed himself to Abner and Lazarus and some 150 of their associates, including more than 50 of the evangelistic corps of the seventy. This appearance occurred just after the opening of a special meeting in the synagogue which had been called by Abner to discuss the crucifixion of Jesus and the more recent report of the resurrection which had been brought by David’s messenger. Inasmuch as the resurrected Lazarus was now a member of this group of believers, it was not difficult for them to believe the report that Jesus had risen from the dead.
 \vs p191 4:2 The meeting in the synagogue was just being opened by Abner and Lazarus, who were standing together in the pulpit, when the entire audience of believers saw the form of the Master appear suddenly. He stepped forward from where he had appeared between Abner and Lazarus, neither of whom had observed him, and saluting the company, said:
 \vs p191 4:3 \pc \textcolour{ubdarkred}{“Peace be upon you. You all know that we have one Father in heaven, and that there is but one gospel of the kingdom --- the good news of the gift of eternal life which men receive by faith. As you rejoice in your loyalty to the gospel, pray the Father of truth to shed abroad in your hearts a new and greater love for your brethren. You are to love all men as I have loved you; you are to serve all men as I have served you. With understanding sympathy and brotherly affection, fellowship all your brethren who are dedicated to the proclamation of the good news, whether they be Jew or gentile, Greek or Roman, Persian or Ethiopian. John proclaimed the kingdom in advance; you have preached the gospel in power; the Greeks already teach the good news; and I am soon to send forth the Spirit of Truth into the souls of all these, my brethren, who have so unselfishly dedicated their lives to the enlightenment of their fellows who sit in spiritual darkness. You are all the children of light; therefore stumble not into the misunderstanding entanglements of mortal suspicion and human intolerance. If you are ennobled, by the grace of faith, to love unbelievers, should you not also equally love those who are your fellow believers in the far\hyp{}spreading household of faith? Remember, as you love one another, all men will know that you are my disciples.}
 \vs p191 4:4 \textcolour{ubdarkred}{“Go, then, into all the world proclaiming this gospel of the fatherhood of God and the brotherhood of men to all nations and races and ever be wise in your choice of methods for presenting the good news to the different races and tribes of mankind. Freely you have received this gospel of the kingdom, and you will freely give the good news to all nations. Fear not the resistance of evil, for I am with you always, even to the end of the ages. And my peace I leave with you.”}
