--- a/tex/p147.tex
+++ b/tex/p147.tex
@@ -19,7 +19,7 @@
 \vs p147 2:1 Early on the morning of Tuesday, March 30, Jesus and the apostolic party started on their journey to Jerusalem for the Passover, going by the route of the Jordan valley. They arrived on the afternoon of Friday, April 2, and established their headquarters, as usual, at Bethany. Passing through Jericho, they paused to rest while Judas made a deposit of some of their common funds in the bank of a friend of his family. This was the first time Judas had carried a surplus of money, and this deposit was left undisturbed until they passed through Jericho again when on that last and eventful journey to Jerusalem just before the trial and death of Jesus.
 \vs p147 2:2 The party had an uneventful trip to Jerusalem, but they had hardly got themselves settled at Bethany when from near and far those seeking healing for their bodies, comfort for troubled minds, and salvation for their souls, began to congregate, so much so that Jesus had little time for rest. Therefore they pitched tents at Gethsemane, and the Master would go back and forth from Bethany to Gethsemane to avoid the crowds which so constantly thronged him. The apostolic party spent almost three weeks at Jerusalem, but Jesus enjoined them to do no public preaching, only private teaching and personal work.
 \vs p147 2:3 At Bethany they quietly celebrated the Passover. And this was the first time that Jesus and all of the twelve partook of the bloodless Passover feast. The apostles of John did not eat the Passover with Jesus and his apostles; they celebrated the feast with Abner and many of the early believers in John’s preaching. This was the second Passover Jesus had observed with his apostles in Jerusalem.
-\vs p147 2:4 When Jesus and the twelve departed for Capernaum, the apostles of John did not return with them. Under the direction of Abner they remained in Jerusalem and the surrounding country, quietly labouring for the extension of the kingdom, while Jesus and the twelve returned to work in Galilee. Never again were the 24 all together until a short time before the commissioning and sending forth of the 70 evangelists. But the two groups were co\hyp{}operative, and notwithstanding their differences of opinion, the best of feelings prevailed.
+\vs p147 2:4 When Jesus and the twelve departed for Capernaum, the apostles of John did not return with them. Under the direction of Abner they remained in Jerusalem and the surrounding country, quietly labouring for the extension of the kingdom, while Jesus and the twelve returned to work in Galilee. Never again were the 24 all together until a short time before the commissioning and sending forth of the seventy evangelists. But the two groups were co\hyp{}operative, and notwithstanding their differences of opinion, the best of feelings prevailed.
 \usection{At the Pool of Bethesda}
 \vs p147 3:1 The afternoon of the second Sabbath in Jerusalem, as the Master and the apostles were about to participate in the temple services, John said to Jesus, “Come with me, I would show you something.” John conducted Jesus out through one of the Jerusalem gates to a pool of water called Bethesda. Surrounding this pool was a structure of five porches under which a large group of sufferers lingered in quest of healing. This was a hot spring whose reddish\hyp{}tinged water would bubble up at irregular intervals because of gas accumulations in the rock caverns underneath the pool. This periodic disturbance of the warm waters was believed by many to be due to supernatural influences, and it was a popular belief that the first person who entered the water after such a disturbance would be healed of whatever infirmity he had.
 \vs p147 3:2 The apostles were somewhat restless under the restrictions imposed by Jesus, and John, the youngest of the 12, was especially restive under this restraint. He had brought Jesus to the pool thinking that the sight of the assembled sufferers would make such an appeal to the Master’s compassion that he would be moved to perform a miracle of healing, and thereby would all Jerusalem be astounded and presently be won to believe in the gospel of the kingdom. Said John to Jesus: “Master, see all of these suffering ones; is there nothing we can do for them?” And Jesus replied: \textcolour{ubdarkred}{“John, why would you tempt me to turn aside from the way I have chosen? Why do you go on desiring to substitute the working of wonders and the healing of the sick for the proclamation of the gospel of eternal truth? My son, I may not do that which you desire, but gather together these sick and afflicted that I may speak words of good cheer and eternal comfort to them.”}
