--- a/tex/p148.tex
+++ b/tex/p148.tex
@@ -17,8 +17,8 @@
 \usection{A New School of the Prophets}
 \vs p148 1:1 Peter, James, and Andrew were the committee designated by Jesus to pass upon applicants for admission to the school of evangelists. All the races and nationalities of the Roman world and the East, as far as India, were represented among the students in this new school of the prophets. This school was conducted on the plan of learning and doing. What the students learned during the forenoon they taught to the assembly by the seaside during the afternoon. After supper they informally discussed both the learning of the forenoon and the teaching of the afternoon.
 \vs p148 1:2 Each of the apostolic teachers taught his own view of the gospel of the kingdom. They made no effort to teach just alike; there was no standardized or dogmatic formulation of theologic doctrines. Though they all taught the \bibemph{same truth,} each apostle presented his own personal interpretation of the Master’s teaching. And Jesus upheld this presentation of the diversity of personal experience in the things of the kingdom, unfailingly harmonizing and co\hyp{}ordinating these many and divergent views of the gospel at his weekly question hours. Notwithstanding this great degree of personal liberty in matters of teaching, Simon Peter tended to dominate the theology of the school of evangelists. Next to Peter, James Zebedee exerted the greatest personal influence.
-\vs p148 1:3 The 100 and more evangelists trained during this five months by the seaside represented the material from which (excepting Abner and John’s apostles) the later 70 gospel teachers and preachers were drawn. The school of evangelists did not have everything in common to the same degree as did the twelve.
-\vs p148 1:4 These evangelists, though they taught and preached the gospel, did not baptize believers until after they were later ordained and commissioned by Jesus as the 70 messengers of the kingdom. Only 7 of the large number healed at the sundown scene at this place were to be found among these evangelistic students. The nobleman’s son of Capernaum was one of those trained for gospel service in Peter’s school.
+\vs p148 1:3 The 100 and more evangelists trained during this five months by the seaside represented the material from which (excepting Abner and John’s apostles) the later seventy gospel teachers and preachers were drawn. The school of evangelists did not have everything in common to the same degree as did the twelve.
+\vs p148 1:4 These evangelists, though they taught and preached the gospel, did not baptize believers until after they were later ordained and commissioned by Jesus as the seventy messengers of the kingdom. Only 7 of the large number healed at the sundown scene at this place were to be found among these evangelistic students. The nobleman’s son of Capernaum was one of those trained for gospel service in Peter’s school.
 \usection{The Bethsaida Hospital}
 \vs p148 2:1 In connection with the seaside encampment, Elman, the Syrian physician, with the assistance of a corps of 25 young women and twelve men, organized and conducted for four months what should be regarded as the kingdom’s first hospital. At this infirmary, located a short distance to the south of the main tented city, they treated the sick in accordance with all known material methods as well as by the spiritual practices of prayer and faith encouragement. Jesus visited the sick of this encampment not less than three times a week and made personal contact with each sufferer. As far as we know, no so\hyp{}called miracles of supernatural healing occurred among the 1,000 afflicted and ailing persons who went away from this infirmary improved or cured. However, the vast majority of these benefited individuals ceased not to proclaim that Jesus had healed them.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/First-Hospital.jpg}\caption{The Kingdom's First Hospital by Russ~Docken}\end{figure}}
 \vs p148 2:2 Many of the cures effected by Jesus in connection with his ministry in behalf of Elman’s patients did, indeed, appear to resemble the working of miracles, but we were instructed that they were only just such transformations of mind and spirit as may occur in the experience of expectant and faith\hyp{}dominated persons who are under the immediate and inspirational influence of a strong, positive, and beneficent personality whose ministry banishes fear and destroys anxiety.
