--- a/tex/p165.tex
+++ b/tex/p165.tex
@@ -6,14 +6,14 @@
 \uminitoc{Talks to the Apostles on Wealth}
 \uminitoc{Answer to Peter’s Question}
 \author{Midwayer Commission}
-\vs p165 0:1 On Tuesday, January 3, A.D.\,30, Abner, the former chief of the twelve apostles of John the Baptist, a Nazarite and onetime head of the Nazarite school at Engedi, now chief of the 70 messengers of the kingdom, called his associates together and gave them final instructions before sending them on a mission to all of the cities and villages of Perea. This Perean mission continued for almost three months and was the last ministry of the Master. From these labours Jesus went directly to Jerusalem to pass through his final experiences in the flesh. The 70, supplemented by the periodic labours of Jesus and the twelve apostles, worked in the following cities and towns and some 50 additional villages: Zaphon, Gadara, Macad, Arbela, Ramath, Edrei, Bosora, Caspin, Mispeh, Gerasa, Ragaba, Succoth, Amathus, Adam, Penuel, Capitolias, Dion, Hatita, Gadda, Philadelphia, Jogbehah, Gilead, Beth\hyp{}Nimrah, Tyrus, Elealah, Livias, Heshbon, Callirrhoe, Beth\hyp{}Peor, Shittim, Sibmah, Medeba, Beth\hyp{}Meon, Areopolis, and Aroer.
+\vs p165 0:1 On Tuesday, January 3, A.D.\,30, Abner, the former chief of the twelve apostles of John the Baptist, a Nazarite and onetime head of the Nazarite school at Engedi, now chief of the seventy messengers of the kingdom, called his associates together and gave them final instructions before sending them on a mission to all of the cities and villages of Perea. This Perean mission continued for almost three months and was the last ministry of the Master. From these labours Jesus went directly to Jerusalem to pass through his final experiences in the flesh. The seventy, supplemented by the periodic labours of Jesus and the twelve apostles, worked in the following cities and towns and some 50 additional villages: Zaphon, Gadara, Macad, Arbela, Ramath, Edrei, Bosora, Caspin, Mispeh, Gerasa, Ragaba, Succoth, Amathus, Adam, Penuel, Capitolias, Dion, Hatita, Gadda, Philadelphia, Jogbehah, Gilead, Beth\hyp{}Nimrah, Tyrus, Elealah, Livias, Heshbon, Callirrhoe, Beth\hyp{}Peor, Shittim, Sibmah, Medeba, Beth\hyp{}Meon, Areopolis, and Aroer.
 \vs p165 0:2 Throughout this tour of Perea the women’s corps, now numbering 62, took over most of the work of ministration to the sick. This was the final period of the development of the higher spiritual aspects of the gospel of the kingdom, and there was, accordingly, an absence of miracle working. No other part of Palestine was so thoroughly worked by the apostles and disciples of Jesus, and in no other region did the better classes of citizens so generally accept the Master’s teaching.
 \vs p165 0:3 Perea at this time was about equally gentile and Jewish, the Jews having been generally removed from these regions during the times of Judas Maccabee. Perea was the most beautiful and picturesque province of all Palestine. It was generally referred to by the Jews as “the land beyond the Jordan.”\fnc{\ldots{}from these regions during the times of Judas \bibtextul{Maccabeus.} \bibexpl{Although Maccabeus is a more accurate transliteration of the Greek, Maccabee is very common in English works and is used in all other occurrences of the word in the Urantia papers. Therefore, the committee decided to standardize on “Maccabee.”}}
-\vs p165 0:4 Throughout this period Jesus divided his time between the camp at Pella and trips with the twelve to assist the 70 in the various cities where they taught and preached. Under Abner’s instructions the 70 baptized all believers, although Jesus had not so charged them.
+\vs p165 0:4 Throughout this period Jesus divided his time between the camp at Pella and trips with the twelve to assist the seventy in the various cities where they taught and preached. Under Abner’s instructions the seventy baptized all believers, although Jesus had not so charged them.
 \usection{At the Pella Camp}
 \vs p165 1:1 By the middle of January more than 1200 persons were gathered together at Pella, and Jesus taught this multitude at least once each day when he was in residence at the camp, usually speaking at 9:00 if not prevented by rain. Peter and the other apostles taught each afternoon. The evenings Jesus reserved for the usual sessions of questions and answers with the twelve and other advanced disciples. The evening groups averaged about 50.
 \vs p165 1:2 By the middle of March, the time when Jesus began his journey toward Jerusalem, over 4,000 persons composed the large audience which heard Jesus or Peter preach each morning. The Master chose to terminate his work on earth when the interest in his message had reached a high point, the highest point attained under this second or nonmiraculous phase of the progress of the kingdom. While \bibfrac{3}{4}\ts{ers} of the multitude were truth seekers, there were also present a large number of Pharisees from Jerusalem and elsewhere, together with many doubters and cavillers.
-\vs p165 1:3 Jesus and the twelve apostles devoted much of their time to the multitude assembled at the Pella camp. The twelve paid little or no attention to the field work, only going out with Jesus to visit Abner’s associates from time to time. Abner was very familiar with the Perean district since this was the field in which his former master, John the Baptist, had done most of his work. After beginning the Perean mission, Abner and the 70 never returned to the Pella camp.
+\vs p165 1:3 Jesus and the twelve apostles devoted much of their time to the multitude assembled at the Pella camp. The twelve paid little or no attention to the field work, only going out with Jesus to visit Abner’s associates from time to time. Abner was very familiar with the Perean district since this was the field in which his former master, John the Baptist, had done most of his work. After beginning the Perean mission, Abner and the seventy never returned to the Pella camp.
 \usection{Sermon on the Good Shepherd}
 \vs p165 2:1 A company of over 300 Jerusalemites, Pharisees and others, followed Jesus north to Pella when he hastened away from the jurisdiction of the Jewish rulers at the ending of the feast of the dedication; and it was in the presence of these Jewish teachers and leaders, as well as in the hearing of the twelve apostles, that Jesus preached the sermon on the “Good Shepherd.” After half an hour of informal discussion, speaking to a group of about 100, Jesus said:
 \vs p165 2:2 \pc \textcolour{ubdarkred}{“On this night I have much to tell you, and since many of you are my disciples and some of you my bitter enemies, I will present my teaching in a parable, so that you may each take for yourself that which finds a reception in your heart.}
@@ -64,5 +64,5 @@
 \vs p165 6:1 As they sat thinking, Simon Peter asked: “Do you speak this parable to us, your apostles, or is it for all the disciples?” And Jesus answered:
 \vs p165 6:2 \pc \textcolour{ubdarkred}{“In the time of testing, a man’s soul is revealed; trial discloses what really is in the heart. When the servant is tested and proved, then may the lord of the house set such a servant over his household and safely trust this faithful steward to see that his children are fed and nurtured. Likewise, will I soon know who can be trusted with the welfare of my children when I shall have returned to the Father. As the lord of the household shall set the true and tried servant over the affairs of his family, so will I exalt those who endure the trials of this hour in the affairs of my kingdom.}
 \vs p165 6:3 \textcolour{ubdarkred}{“But if the servant is slothful and begins to say in his heart, ‘My master delays his coming,’ and begins to mistreat his fellow servants and to eat and drink with the drunken, then the lord of that servant will come at a time when he looks not for him and, finding him unfaithful, will cast him out in disgrace. Therefore you do well to prepare yourselves for that day when you will be visited suddenly and in an unexpected manner. Remember, much has been given to you; therefore will much be required of you. Fiery trials are drawing near you. I have a baptism to be baptized with, and I am on watch until this is accomplished. You preach peace on earth, but my mission will not bring peace in the material affairs of men --- not for a time, at least. Division can only be the result where two members of a family believe in me and three members reject this gospel. Friends, relatives, and loved ones are destined to be set against each other by the gospel you preach. True, each of these believers shall have great and lasting peace in his own heart, but peace on earth will not come until all are willing to believe and enter into their glorious inheritance of sonship with God. Nevertheless, go into all the world proclaiming this gospel to all nations, to every man, woman, and child.”}
-\vs p165 6:4 \pc And this was the end of a full and busy Sabbath day. On the morrow Jesus and the twelve went into the cities of northern Perea to visit with the 70, who were working in these regions under Abner’s supervision.
+\vs p165 6:4 \pc And this was the end of a full and busy Sabbath day. On the morrow Jesus and the twelve went into the cities of northern Perea to visit with the seventy, who were working in these regions under Abner’s supervision.
 \quizlink
